# cnn-in-fortran

./: .gitignore  README.md
src/: weather-cnn.yml
src/py_ftorch_compare/: CMakeLists.txt  comparison.ipynb  dataloader.py  fortran_visual.py  get_one.ipynb  infer_fortran.f90  infer_python.py  train.sh  train_and_test.py  visualization.py
src/time_counting/: Makefile  Time_Counting-Depth.ipynb  Time_Counting.ipynb  Validate.ipynb  cuda_sync.c  dataset.py  get_one.ipynb  infer_fortran_cpu.f90  infer_fortran_cuda.f90  validate_fortran_cuda.f90
src/train_and_test_pytorch/: cnn-torch.yml  configs.py  dataloader.py  models.py  train_and_test.py
src/train_and_test_unet/: CMakeLists.txt  dataloader.py  dataset.py  gpu_test.sh  loss.py  models.py  pt2ts.py  sample.py  test.py  train_and_test.py  training_graph.py  training_record_plot.py  unet_infer_fortran.f90  visualization.py
